# psd-2026

./: .gitignore  PSD_Sprawozdanie_projekt.docx  README.md  alert.schema.json  docker-compose.yaml  transaction.schema.json
card-anomaly/: Cargo.toml  docker-compose.yaml  mock_alert_producer.py  mock_tx_producer.py  pyproject.toml
card-anomaly/alarm-watcher/: Cargo.toml
card-anomaly/alarm-watcher/src/: main.rs
card-anomaly/flink-detector/: pom.xml
card-anomaly/flink-detector/src/main/java/: Alert.java  AnomalyDetectorJob.java  AnomalyKind.java  CardState.java  GpsCoords.java  Region.java  Transaction.java
card-anomaly/shared/: Cargo.toml
card-anomaly/shared/src/: lib.rs
card-anomaly/tx-inspector/: Cargo.toml
card-anomaly/tx-inspector/src/: main.rs  read_print.rs
card-anomaly/tx-simulator/: Cargo.toml
card-anomaly/tx-simulator/src/: anomaly.rs  build_fleet.rs  fleet.rs  main.rs  send_one.rs
docs/: INSTRUCTION.md  architektura.drawio
