
[workspace]
resolver = "2"
members = [
    "shared",
    "tx-simulator",
    "tx-inspector",
    "alarm-watcher",
]
 
[workspace.dependencies]
rdkafka   = { version = "0.36", features = ["cmake-build"] }
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
uuid      = { version = "1", features = ["v4", "serde"] }
chrono    = { version = "0.4", features = ["serde"] }
rand      = { version = "0.8", features = ["small_rng"] }
anyhow    = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui   = "0.27"
crossterm = "0.27"
clap      = { version = "4", features = ["derive"] }
 
