[package]
name    = "tx-inspector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tx-inspector"
path = "src/main.rs"

[dependencies]
shared            = { path = "../shared" }
rdkafka           = { workspace = true }
tokio             = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
clap              = { workspace = true }
chrono            = { workspace = true }

[[bin]]
name = "read-print"
path = "src/read_print.rs"